fix delete product
